[package]
name = "asammdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asammdf_derive = {path="./asammdf_derive"}
bitflags = "1.3.2"
chrono = "0.4.19"
indextree = "4.4.0"
itertools = "0.10.3"
libflate = "1.2.0"
nom = "7.1.1"
tempfile = "3.3.0"
