[package]
name = "asammdf"
version = "0.1.0"
edition = "2021"
authors = [ "cupofc0t <cupofc0t@gmail.com>" ]
description = "Read and write ASAM MDF file, simply and efficiently."
license = "Apache-2.0"
repository = "https://github.com/H2O2-IO/asammdf"
keywords = [ "asam", "mdf", "measurement", "data" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asammdf_derive = "0.1.0"
bitflags = "1.3.2"
chrono = "0.4.19"
derive_builder = "0.11.2"
indextree = "4.4.0"
itertools = "0.10.3"
libflate = "1.2.0"
nom = "7.1.1"
tempfile = "3.3.0"
