[package]
name = "asammdf_derive"
version = "0.1.0"
edition = "2021"
authors = [ "cupofc0t <cupofc0t@gmail.com>" ]
description = "Read and write ASAM MDF file, simply and efficiently."
license = "Apache-2.0"
repository = "https://github.com/H2O2-IO/asammdf"
keywords = [ "asam", "mdf", "measurement", "data" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = {version = "1.0.96",features = ["full"]}